<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F221B1F3"
    tools:context=".splashscreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176"
        app:srcCompat="@drawable/weathers_star"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/welcome_to_weather_star"
        android:textColor="#455A64"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/StudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10445005"
        android:textColor="#4E342E"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/StName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="13dp"
        android:text="@string/presented_by_tshepo_tsotesti"
        android:textColor="#455A64"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/StudentID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/EnterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107"
        android:text="@string/enter"
        android:textColor="#1B5E20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ExitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFC107"
        android:text="@string/exit"
        android:textColor="#880E4F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterBtn"
        app:layout_constraintVertical_bias="0.373" />

    <TextView
        android:id="@+id/WelcomeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="28dp"
        android:text="@string/textview"
        android:textColor="#263238"
        app:layout_constraintBottom_toTopOf="@+id/EnterBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudentID" />
</androidx.constraintlayout.widget.ConstraintLayout>